stderr2
warning: [options] bootstrap class path not set in conjunction with -source 1.6
C:\Development\mcdev\unraveling\build\sources\java\unraveling\ShapeData.java:82: error: incompatible types: List<WorldCoordinates> cannot be converted to List<TileEntity>
        if (!isValid_te(myGenerators, GEN_NUM)) {
                        ^
C:\Development\mcdev\unraveling\build\sources\java\unraveling\VoidAggregationHandler.java:59: error: cannot find symbol
                        ArrayList<WorldCoordinates> gens = new ArrayList<WorldCoordinates>(gens_tmp);
                                                                                           ^
  symbol:   variable gens_tmp
  location: class VoidAggregationHandler
C:\Development\mcdev\unraveling\build\sources\java\unraveling\VoidAggregationHandler.java:60: error: no suitable constructor found for ShapeData(ArrayList<WorldCoordinates>)
                        generatorsShape.put(new_id, new ShapeData(gens));
                                                    ^
    constructor ShapeData.ShapeData() is not applicable
      (actual and formal argument lists differ in length)
    constructor ShapeData.ShapeData(int,int,int,int) is not applicable
      (actual and formal argument lists differ in length)
    constructor ShapeData.ShapeData(List<WorldCoordinates>,int) is not applicable
      (actual and formal argument lists differ in length)
C:\Development\mcdev\unraveling\build\sources\java\unraveling\VoidAggregationHandler.java:70: error: cannot find symbol
        if (generatorsGroupId.contains(wc)) {
                             ^
  symbol:   method contains(WorldCoordinates)
  location: variable generatorsGroupId of type HashMap<WorldCoordinates,Integer>
C:\Development\mcdev\unraveling\build\sources\java\unraveling\VoidAggregationHandler.java:77: error: cannot find symbol
            for (Iterator<WorldCoordinates> iterator = orphanGenerators.iterator(); orphanGenerators.hasNext();) {
                                                                                                    ^
  symbol:   method hasNext()
  location: variable orphanGenerators of type HashSet<WorldCoordinates>
C:\Development\mcdev\unraveling\build\sources\java\unraveling\VoidAggregationHandler.java:79: error: cannot find symbol
                if (generatorsGroupId.contains(owc)) {
                                     ^
  symbol:   method contains(WorldCoordinates)
  location: variable generatorsGroupId of type HashMap<WorldCoordinates,Integer>
C:\Development\mcdev\unraveling\build\sources\java\unraveling\VoidAggregationHandler.java:158: error: incompatible types: ArrayList<TileEntity> cannot be converted to List<WorldCoordinates>
        ShapeData sd = new ShapeData(myGenerators, GEN_NUM);
                                     ^
C:\Development\mcdev\unraveling\build\sources\java\unraveling\VoidAggregationHandler.java:161: error: cannot find symbol
        generatorsMain.put(new_id, wc);
        ^
  symbol:   variable generatorsMain
  location: class VoidAggregationHandler
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
8 errors
1 warning

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output.
